--- a/config/env.yml
+++ b/config/env.yml
@@ -38,6 +38,7 @@ dependencies:
   - icu=64.2=h6de7cb9_1
   - isl=0.19=0
   - jpeg=9c=h1de35cc_1001
+  - jq=1.6=h1de35cc_1000
   - krb5=1.16.3=hcfa6398_1001
   - ld64=450.3=h3c32e8a_2
   - libblas=3.8.0=14_openblas
@@ -55,6 +56,7 @@ dependencies:
   - libpng=1.6.37=h2573ce8_0
   - libssh2=1.8.2=hcdc9a53_2
   - libtiff=4.1.0=ha78913b_1
+  - libv8=7.5.288.30=h319a767_1
   - libxml2=2.9.10=h53d96d6_0
   - llvm-openmp=9.0.0=h40edb58_0
   - lz4-c=1.8.3=h6de7cb9_1001
@@ -62,6 +64,7 @@ dependencies:
   - mpc=1.1.0=h4160ff4_1006
   - mpfr=4.0.2=h44b798e_0
   - ncurses=6.1=h0a44026_1002
+  - oniguruma=6.9.3=h01d97ff_0
   - openjdk=8.0.192=h1de35cc_1003
   - openssl=1.1.1d=h0b31af3_0
   - pandoc=2.8=0
@@ -73,12 +76,12 @@ dependencies:
   - r-backports=1.1.5=r36h17f1fa6_0
   - r-base=3.6.1=he15a7b5_6
   - r-base64enc=0.1_3=r36h159158b_1003
+  - r-bh=1.69.0_1=r36h6115d3f_1
   - r-bit=1.1_14=r36h159158b_1
   - r-bit64=0.9_7=r36h159158b_1001
   - r-bitops=1.0_6=r36h159158b_1003
   - r-blob=1.2.0=r36_1
   - r-brew=1.0_6=r36h6115d3f_1002
-  - r-broom=0.5.2=r36h6115d3f_1
   - r-callr=3.3.2=r36h6115d3f_0
   - r-catools=1.17.1.2=r36hf99fc2c_1
   - r-cellranger=1.1.0=r36h6115d3f_1002
@@ -108,6 +111,8 @@ dependencies:
   - r-forge=0.2.0=r36h6115d3f_1
   - r-fs=1.3.1=r36hf99fc2c_1
   - r-generics=0.0.2=r36h6115d3f_1002
+  - r-geosphere=1.5_10=r36h159158b_1
+  - r-ggmap=3.0.0=r36h6115d3f_1
   - r-ggplot2=3.2.1=r36h6115d3f_0
   - r-gh=1.0.1=r36h6115d3f_1002
   - r-git2r=0.26.1=r36h45ee23c_1
@@ -122,6 +127,8 @@ dependencies:
   - r-httpuv=1.5.2=r36hf99fc2c_1
   - r-httr=1.4.1=r36h6115d3f_1
   - r-ini=0.3.1=r36h6115d3f_1002
+  - r-jpeg=0.1_8=r36h159158b_1003
+  - r-jqr=1.1.0=r36h159158b_1
   - r-jsonlite=1.6=r36h159158b_1001
   - r-knitr=1.26=r36h6115d3f_0
   - r-labeling=0.3=r36h6115d3f_1002
@@ -129,7 +136,6 @@ dependencies:
   - r-lattice=0.20_38=r36h159158b_1002
   - r-lazyeval=0.2.2=r36h159158b_1
   - r-lifecycle=0.1.0=r36h6115d3f_0
-  - r-lubridate=1.7.4=r36hf99fc2c_1002
   - r-magrittr=1.5=r36h6115d3f_1002
   - r-markdown=1.1=r36h159158b_0
   - r-mass=7.3_51.4=r36h159158b_1
@@ -138,7 +144,6 @@ dependencies:
   - r-mgcv=1.8_29=r36h159158b_0
   - r-mime=0.7=r36h159158b_1
   - r-miniui=0.1.1.1=r36h6115d3f_1001
-  - r-modelr=0.1.5=r36h6115d3f_0
   - r-mongolite=2.1.0=r36h159158b_1
   - r-munsell=0.5.0=r36h6115d3f_1002
   - r-nlme=3.1_141=r36h85e41a7_1
@@ -152,6 +157,7 @@ dependencies:
   - r-pki=0.1_5.1=r36h159158b_1003
   - r-plogr=0.2.0=r36h6115d3f_1002
   - r-plyr=1.8.4=r36hf99fc2c_1003
+  - r-png=0.1_7=r36h159158b_1003
   - r-praise=1.0.0=r36h6115d3f_1003
   - r-prettyunits=1.0.2=r36h6115d3f_1002
   - r-processx=3.4.1=r36h159158b_0
@@ -171,11 +177,12 @@ dependencies:
   - r-readxl=1.3.1=r36hf99fc2c_2
   - r-rematch=1.0.1=r36h6115d3f_1002
   - r-remotes=2.1.0=r36h6115d3f_1
-  - r-reprex=0.3.0=r36h6115d3f_1
   - r-reshape2=1.4.3=r36hf99fc2c_1004
   - r-rex=1.1.2=r36h6115d3f_1001
+  - r-rgooglemaps=1.4.4=r36h6115d3f_0
   - r-rjava=0.9_11=r36h159158b_1
   - r-rjdbc=0.2_7.1=r36h6115d3f_0
+  - r-rjson=0.2.20=r36hf99fc2c_1001
   - r-rjsonio=1.3_1.2=r36hf99fc2c_1
   - r-rlang=0.4.2=r36h17f1fa6_0
   - r-rmarkdown=1.18=r36h6115d3f_0
@@ -184,13 +191,13 @@ dependencies:
   - r-rsconnect=0.8.15=r36h6115d3f_0
   - r-rstudioapi=0.10=r36h6115d3f_2
   - r-rversions=2.0.0=r36h6115d3f_1
-  - r-rvest=0.3.5=r36h6115d3f_0
   - r-scales=1.1.0=r36h6115d3f_0
-  - r-selectr=0.4_1=r36h6115d3f_1001
   - r-sessioninfo=1.1.1=r36h6115d3f_1001
   - r-shiny=1.4.0=r36h6115d3f_0
   - r-sourcetools=0.1.7=r36h6de7cb9_1001
+  - r-sp=1.3_1=r36h159158b_1001
   - r-sparklyr=1.0.5=r36h6115d3f_0
+  - r-spatial=7.3_11=r36h159158b_1003
   - r-stringi=1.4.3=r36h570836f_3
   - r-stringr=1.4.0=r36h6115d3f_1
   - r-sys=3.3=r36h159158b_0
@@ -198,10 +205,10 @@ dependencies:
   - r-tibble=2.1.3=r36h159158b_1
   - r-tidyr=1.0.0=r36hf99fc2c_0
   - r-tidyselect=0.2.5=r36hf99fc2c_1001
-  - r-tidyverse=1.3.0=r36h6115d3f_0
   - r-tinytex=0.17=r36h6115d3f_0
   - r-usethis=1.5.1=r36h6115d3f_1
   - r-utf8=1.1.4=r36h159158b_1001
+  - r-v8=2.3=r36hf99fc2c_1
   - r-vctrs=0.2.0=r36h159158b_1
   - r-viridislite=0.3.0=r36h6115d3f_1002
   - r-whisker=0.4=r36h6115d3f_0
