--- a/config/env.yml
+++ b/config/env.yml
@@ -6,19 +6,38 @@ channels:
   - r
 dependencies:
   - _r-mutex=1.0.1=anacondar_1
+  - aioeasywebdav=2.4.0=py36_1000
+  - aiohttp=3.6.1=py36h01d97ff_0
+  - appdirs=1.4.3=py_1
+  - async-timeout=3.0.1=py_1000
+  - attrs=19.3.0=py_0
+  - bcrypt=3.1.7=py36h0b31af3_0
+  - boto3=1.10.28=py_0
+  - botocore=1.13.28=py_1
   - bwidget=1.9.13=0
   - bzip2=1.0.8=h01d97ff_1
-  - ca-certificates=2019.9.11=hecc5488_0
+  - ca-certificates=2019.11.28=hecc5488_0
+  - cachetools=3.1.1=py_0
   - cairo=1.16.0=he1c11cd_1002
   - cctools=927.0.2=h5ba7a2e_2
+  - certifi=2019.11.28=py36_0
+  - cffi=1.13.2=py36h33e799b_0
+  - chardet=3.0.4=py36_1003
   - clang=9.0.0=default_hf57f61e_4
   - clang_osx-64=9.0.0=h05bbb7f_6
   - clangxx=9.0.0=default_hf57f61e_4
   - clangxx_osx-64=9.0.0=h05bbb7f_6
   - compiler-rt=9.0.0=ha700673_2
   - compiler-rt_osx-64=9.0.0=ha700673_2
+  - configargparse=0.13.0=py_1
+  - cryptography=2.8=py36hafa8578_0
   - curl=7.65.3=h22ea746_0
   - cyrus-sasl=2.1.27=h5d77f49_0
+  - datrie=0.8=py36h01d97ff_0
+  - decorator=4.4.1=py_0
+  - docutils=0.15.2=py36_0
+  - dropbox=9.4.0=py_0
+  - filechunkio=1.8=py_2
   - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
   - font-ttf-inconsolata=2.001=hab24e00_0
   - font-ttf-source-code-pro=2.030=hab24e00_0
@@ -27,18 +46,34 @@ dependencies:
   - fonts-anaconda=1=h8fa9717_0
   - freetype=2.10.0=h24853df_1
   - fribidi=1.0.5=h01d97ff_1002
+  - ftputil=3.4=py_0
   - gettext=0.19.8.1=h46ab8bc_1002
   - gfortran_impl_osx-64=7.3.0=hf4212f2_2
   - gfortran_osx-64=7.3.0=h22b1bf0_6
+  - gitdb2=2.0.6=py_0
+  - gitpython=3.0.5=py_0
   - glib=2.58.3=h9d45998_1002
   - gmp=6.1.2=h0a44026_1000
+  - google-api-core=1.14.3=py36_0
+  - google-auth=1.7.1=py_0
+  - google-cloud-core=1.0.3=py_0
+  - google-cloud-storage=1.20.0=py_0
+  - google-resumable-media=0.4.1=py_0
+  - googleapis-common-protos=1.6.0=py36_0
   - graphite2=1.3.13=h2098e52_1000
+  - graphviz=2.38.0=hc6cc99f_1011
   - gsl=2.5=ha2d443c_1
   - harfbuzz=2.4.0=hd8d2a14_3
   - icu=64.2=h6de7cb9_1
+  - idna=2.8=py36_1000
+  - idna_ssl=1.1.0=py36_1000
+  - importlib_metadata=0.23=py36_0
   - isl=0.19=0
+  - jinja2=2.10.3=py_0
+  - jmespath=0.9.4=py_0
   - jpeg=9c=h1de35cc_1001
   - jq=1.6=h1de35cc_1000
+  - jsonschema=3.2.0=py36_0
   - krb5=1.16.3=hcfa6398_1001
   - ld64=450.3=h3c32e8a_2
   - libblas=3.8.0=14_openblas
@@ -54,6 +89,7 @@ dependencies:
   - libntlm=1.4=h1de35cc_1001
   - libopenblas=0.3.7=h4bb4525_3
   - libpng=1.6.37=h2573ce8_0
+  - libprotobuf=3.11.0=hd174df1_0
   - libssh2=1.8.2=hcdc9a53_2
   - libtiff=4.1.0=ha78913b_1
   - libv8=7.5.288.30=h319a767_1
@@ -61,16 +97,41 @@ dependencies:
   - llvm-openmp=9.0.0=h40edb58_0
   - lz4-c=1.8.3=h6de7cb9_1001
   - make=4.2.1=h1de35cc_2004
+  - markupsafe=1.1.1=py36h0b31af3_0
+  - more-itertools=7.2.0=py_0
   - mpc=1.1.0=h4160ff4_1006
   - mpfr=4.0.2=h44b798e_0
+  - multidict=4.6.1=py36h0b31af3_0
   - ncurses=6.1=h0a44026_1002
+  - networkx=2.4=py_0
+  - numpy=1.17.3=py36hde6bac1_0
   - oniguruma=6.9.3=h01d97ff_0
   - openjdk=8.0.192=h1de35cc_1003
   - openssl=1.1.1d=h0b31af3_0
+  - pandas=0.25.3=py36h4f17bb1_0
   - pandoc=2.8=0
   - pango=1.42.4=h6691c8e_1
+  - paramiko=2.6.0=py36_0
   - pcre=8.43=h4a8c4bd_0
+  - pip=19.3.1=py36_0
   - pixman=0.38.0=h01d97ff_1003
+  - prettytable=0.7.2=py_3
+  - protobuf=3.11.0=py36h4a8c4bd_0
+  - psutil=5.6.7=py36h0b31af3_0
+  - pyasn1=0.4.8=py_0
+  - pyasn1-modules=0.2.7=py_0
+  - pycparser=2.19=py36_1
+  - pygraphviz=1.5=py36h0b31af3_1001
+  - pynacl=1.3.0=py36h0b31af3_1001
+  - pyopenssl=19.0.0=py36_0
+  - pyrsistent=0.15.6=py36h0b31af3_0
+  - pysftp=0.2.9=py_1
+  - pysocks=1.7.1=py36_0
+  - python=3.6.7=h4285619_1006
+  - python-dateutil=2.8.0=py_0
+  - python-irodsclient=0.7.0=py_0
+  - pytz=2019.3=py_0
+  - pyyaml=5.1.2=py36h0b31af3_0
   - r-askpass=1.1=r36h159158b_1
   - r-assertthat=0.2.1=r36h6115d3f_1
   - r-backports=1.1.5=r36h17f1fa6_0
@@ -92,9 +153,11 @@ dependencies:
   - r-commonmark=1.7=r36h159158b_1001
   - r-config=0.3=r36h6115d3f_1002
   - r-covr=3.4.0=r36hc5da6b9_0
+  - r-cowplot=1.0.0=r36h6115d3f_1
   - r-crayon=1.3.4=r36h6115d3f_1002
   - r-crosstalk=1.0.0=r36h6115d3f_1002
   - r-curl=4.2=r36h159158b_0
+  - r-data.table=1.12.6=r36h17f1fa6_0
   - r-dbi=1.0.0=r36h6115d3f_1002
   - r-dbplyr=1.4.2=r36h6115d3f_1
   - r-desc=1.2.0=r36h6115d3f_1002
@@ -109,14 +172,17 @@ dependencies:
   - r-fastmap=1.0.1=r36hc5da6b9_0
   - r-forcats=0.4.0=r36h6115d3f_1
   - r-forge=0.2.0=r36h6115d3f_1
+  - r-formatr=1.7=r36h6115d3f_1
   - r-fs=1.3.1=r36hf99fc2c_1
   - r-generics=0.0.2=r36h6115d3f_1002
   - r-geosphere=1.5_10=r36h159158b_1
   - r-ggmap=3.0.0=r36h6115d3f_1
   - r-ggplot2=3.2.1=r36h6115d3f_0
+  - r-ggthemes=4.2.0=r36h6115d3f_1
   - r-gh=1.0.1=r36h6115d3f_1002
   - r-git2r=0.26.1=r36h45ee23c_1
   - r-glue=1.3.1=r36h159158b_1
+  - r-gridextra=2.3=r36h6115d3f_1002
   - r-gtable=0.3.0=r36h6115d3f_2
   - r-haven=2.2.0=r36hee97c7f_0
   - r-here=0.1=r36h6115d3f_1002
@@ -210,6 +276,7 @@ dependencies:
   - r-utf8=1.1.4=r36h159158b_1001
   - r-v8=2.3=r36hf99fc2c_1
   - r-vctrs=0.2.0=r36h159158b_1
+  - r-viridis=0.5.1=r36h6115d3f_1003
   - r-viridislite=0.3.0=r36h6115d3f_1002
   - r-whisker=0.4=r36h6115d3f_0
   - r-withr=2.1.2=r36h6115d3f_1001
@@ -219,13 +286,32 @@ dependencies:
   - r-xtable=1.8_4=r36h6115d3f_2
   - r-yaml=2.2.0=r36h159158b_1002
   - r-zeallot=0.1.0=r36h6115d3f_1001
+  - r-zoo=1.8_6=r36h159158b_1
+  - ratelimiter=1.2.0=py36_1000
   - readline=8.0=hcfe32e1_0
+  - requests=2.22.0=py36_1
+  - rsa=4.0=py_0
   - rstudio=1.1.456=h04f5b5a_1
+  - s3transfer=0.2.1=py36_0
+  - setuptools=42.0.1=py36_0
+  - six=1.13.0=py36_0
+  - smmap2=2.0.5=py_0
+  - snakemake=5.3.0=py36_1
+  - snakemake-minimal=5.3.0=py36_1
+  - sqlite=3.30.1=h93121df_0
   - tapi=1000.10.8=ha1b3eb9_4
   - tk=8.6.10=hbbe82c9_0
   - tktable=2.10=h008db23_3
+  - typing_extensions=3.7.4.1=py36_0
   - unixodbc=2.3.7=hea208f4_1000
+  - urllib3=1.25.7=py36_0
+  - wheel=0.33.6=py36_0
+  - wrapt=1.11.2=py36h0b31af3_0
+  - xmlrunner=1.7.7=py_0
   - xz=5.2.4=h1de35cc_1001
+  - yaml=0.1.7=h1de35cc_1001
+  - yarl=1.3.0=py36h1de35cc_1000
+  - zipp=0.6.0=py_0
   - zlib=1.2.11=h0b31af3_1006
   - zstd=1.4.4=he7fca8b_1
 prefix: /Users/kelly/miniconda3/envs/strava
