--- a/config/environment.yml
+++ b/config/environment.yml
@@ -7,19 +7,19 @@ channels:
 dependencies:
   - _r-mutex=1.0.1=anacondar_1
   - aioeasywebdav=2.4.0=py36_1000
-  - aiohttp=3.6.1=py36h01d97ff_0
+  - aiohttp=3.6.2=py36h0b31af3_0
   - appdirs=1.4.3=py_1
   - async-timeout=3.0.1=py_1000
   - attrs=19.3.0=py_0
   - bcrypt=3.1.7=py36h0b31af3_0
-  - boto3=1.10.28=py_0
-  - botocore=1.13.28=py_1
-  - bwidget=1.9.13=0
-  - bzip2=1.0.8=h01d97ff_1
+  - boto3=1.10.45=py_0
+  - botocore=1.13.45=py_0
+  - bwidget=1.9.14=0
+  - bzip2=1.0.8=h0b31af3_2
   - ca-certificates=2019.11.28=hecc5488_0
   - cachetools=3.1.1=py_0
   - cairo=1.16.0=he1c11cd_1002
-  - cctools=927.0.2=h5ba7a2e_2
+  - cctools=927.0.2=h5ba7a2e_3
   - certifi=2019.11.28=py36_0
   - cffi=1.13.2=py36h33e799b_0
   - chardet=3.0.4=py36_1003
@@ -30,7 +30,7 @@ dependencies:
   - compiler-rt=9.0.0=ha700673_2
   - compiler-rt_osx-64=9.0.0=ha700673_2
   - configargparse=0.13.0=py_1
-  - cryptography=2.8=py36hafa8578_0
+  - cryptography=2.8=py36hafa8578_1
   - curl=7.65.3=h22ea746_0
   - cyrus-sasl=2.1.27=h5d77f49_0
   - datrie=0.8=py36h01d97ff_0
@@ -52,11 +52,11 @@ dependencies:
   - gfortran_osx-64=7.3.0=h22b1bf0_6
   - gitdb2=2.0.6=py_0
   - gitpython=3.0.5=py_0
-  - glib=2.58.3=h9d45998_1002
+  - glib=2.58.3=py36h577aef8_1002
   - gmp=6.1.2=h0a44026_1000
-  - google-api-core=1.14.3=py36_0
-  - google-auth=1.7.1=py_0
-  - google-cloud-core=1.0.3=py_0
+  - google-api-core=1.15.0=py36_0
+  - google-auth=1.10.0=py_0
+  - google-cloud-core=1.1.0=py_0
   - google-cloud-storage=1.20.0=py_0
   - google-resumable-media=0.4.1=py_0
   - googleapis-common-protos=1.6.0=py36_0
@@ -67,15 +67,15 @@ dependencies:
   - icu=64.2=h6de7cb9_1
   - idna=2.8=py36_1000
   - idna_ssl=1.1.0=py36_1000
-  - importlib_metadata=0.23=py36_0
+  - importlib_metadata=1.3.0=py36_0
   - isl=0.19=0
   - jinja2=2.10.3=py_0
   - jmespath=0.9.4=py_0
   - jpeg=9c=h1de35cc_1001
   - jq=1.6=h1de35cc_1000
   - jsonschema=3.2.0=py36_0
-  - krb5=1.16.3=hcfa6398_1001
-  - ld64=450.3=h3c32e8a_2
+  - krb5=1.16.4=h1752a42_0
+  - ld64=450.3=h3c32e8a_3
   - libblas=3.8.0=14_openblas
   - libcblas=3.8.0=14_openblas
   - libcurl=7.65.3=h16faf7d_0
@@ -87,9 +87,9 @@ dependencies:
   - liblapack=3.8.0=14_openblas
   - libllvm9=9.0.0=h770b8ee_3
   - libntlm=1.4=h1de35cc_1001
-  - libopenblas=0.3.7=h4bb4525_3
+  - libopenblas=0.3.7=h3d69b6c_6
   - libpng=1.6.37=h2573ce8_0
-  - libprotobuf=3.11.0=hd174df1_0
+  - libprotobuf=3.11.2=hd174df1_0
   - libssh2=1.8.2=hcdc9a53_2
   - libtiff=4.1.0=ha78913b_1
   - libv8=7.5.288.30=h319a767_1
@@ -98,7 +98,7 @@ dependencies:
   - lz4-c=1.8.3=h6de7cb9_1001
   - make=4.2.1=h1de35cc_2004
   - markupsafe=1.1.1=py36h0b31af3_0
-  - more-itertools=7.2.0=py_0
+  - more-itertools=8.0.2=py_0
   - mpc=1.1.0=h4160ff4_1006
   - mpfr=4.0.2=h44b798e_0
   - multidict=4.6.1=py36h0b31af3_0
@@ -109,33 +109,33 @@ dependencies:
   - openjdk=8.0.192=h1de35cc_1003
   - openssl=1.1.1d=h0b31af3_0
   - pandas=0.25.3=py36h4f17bb1_0
-  - pandoc=2.8=0
+  - pandoc=2.9.1=0
   - pango=1.42.4=h6691c8e_1
-  - paramiko=2.6.0=py36_0
+  - paramiko=2.7.1=py36_0
   - pcre=8.43=h4a8c4bd_0
   - pip=19.3.1=py36_0
   - pixman=0.38.0=h01d97ff_1003
   - prettytable=0.7.2=py_3
-  - protobuf=3.11.0=py36h4a8c4bd_0
+  - protobuf=3.11.2=py36h4a8c4bd_0
   - psutil=5.6.7=py36h0b31af3_0
   - pyasn1=0.4.8=py_0
   - pyasn1-modules=0.2.7=py_0
   - pycparser=2.19=py36_1
   - pygraphviz=1.5=py36h0b31af3_1001
   - pynacl=1.3.0=py36h0b31af3_1001
-  - pyopenssl=19.0.0=py36_0
+  - pyopenssl=19.1.0=py36_0
   - pyrsistent=0.15.6=py36h0b31af3_0
   - pysftp=0.2.9=py_1
   - pysocks=1.7.1=py36_0
   - python=3.6.7=h4285619_1006
-  - python-dateutil=2.8.0=py_0
+  - python-dateutil=2.8.1=py_0
   - python-irodsclient=0.7.0=py_0
   - pytz=2019.3=py_0
-  - pyyaml=5.1.2=py36h0b31af3_0
+  - pyyaml=5.2=py36h0b31af3_0
   - r-askpass=1.1=r36h159158b_1
   - r-assertthat=0.2.1=r36h6115d3f_1
   - r-backports=1.1.5=r36h17f1fa6_0
-  - r-base=3.6.1=he15a7b5_6
+  - r-base=3.6.2=he15a7b5_0
   - r-base64enc=0.1_3=r36h159158b_1003
   - r-bh=1.69.0_1=r36h6115d3f_1
   - r-bit=1.1_14=r36h159158b_1
@@ -143,10 +143,10 @@ dependencies:
   - r-bitops=1.0_6=r36h159158b_1003
   - r-blob=1.2.0=r36_1
   - r-brew=1.0_6=r36h6115d3f_1002
-  - r-callr=3.3.2=r36h6115d3f_0
-  - r-catools=1.17.1.2=r36hf99fc2c_1
+  - r-callr=3.4.0=r36h6115d3f_0
+  - r-catools=1.17.1.3=r36hc5da6b9_0
   - r-cellranger=1.1.0=r36h6115d3f_1002
-  - r-cli=1.1.0=r36h6115d3f_2
+  - r-cli=2.0.0=r36h6115d3f_0
   - r-clipr=0.7.0=r36h6115d3f_0
   - r-clisymbols=1.2.0=r36h6115d3f_1002
   - r-colorspace=1.4_1=r36h159158b_1
@@ -156,15 +156,15 @@ dependencies:
   - r-cowplot=1.0.0=r36h6115d3f_1
   - r-crayon=1.3.4=r36h6115d3f_1002
   - r-crosstalk=1.0.0=r36h6115d3f_1002
-  - r-curl=4.2=r36h159158b_0
+  - r-curl=4.3=r36h17f1fa6_0
   - r-data.table=1.12.6=r36h17f1fa6_0
-  - r-dbi=1.0.0=r36h6115d3f_1002
+  - r-dbi=1.1.0=r36h6115d3f_0
   - r-dbplyr=1.4.2=r36h6115d3f_1
   - r-desc=1.2.0=r36h6115d3f_1002
   - r-devtools=2.2.1=r36h6115d3f_0
   - r-digest=0.6.23=r36hc5da6b9_0
   - r-dplyr=0.8.3=r36hf99fc2c_3
-  - r-dt=0.10=r36h6115d3f_0
+  - r-dt=0.11=r36h6115d3f_0
   - r-ellipsis=0.3.0=r36h159158b_0
   - r-evaluate=0.14=r36h6115d3f_1
   - r-fansi=0.4.0=r36h159158b_1001
@@ -204,25 +204,25 @@ dependencies:
   - r-lifecycle=0.1.0=r36h6115d3f_0
   - r-magrittr=1.5=r36h6115d3f_1002
   - r-markdown=1.1=r36h159158b_0
-  - r-mass=7.3_51.4=r36h159158b_1
-  - r-matrix=1.2_17=r36h159158b_1
+  - r-mass=7.3_51.5=r36h17f1fa6_0
+  - r-matrix=1.2_18=r36h17f1fa6_0
   - r-memoise=1.1.0=r36h6115d3f_1003
-  - r-mgcv=1.8_29=r36h159158b_0
-  - r-mime=0.7=r36h159158b_1
+  - r-mgcv=1.8_31=r36h17f1fa6_0
+  - r-mime=0.8=r36h17f1fa6_0
   - r-miniui=0.1.1.1=r36h6115d3f_1001
   - r-mongolite=2.1.0=r36h159158b_1
   - r-munsell=0.5.0=r36h6115d3f_1002
-  - r-nlme=3.1_141=r36h85e41a7_1
-  - r-odbc=1.1.6=r36hf99fc2c_2
+  - r-nlme=3.1_143=r36h384270c_0
+  - r-odbc=1.2.1=r36hc5da6b9_0
   - r-openssl=1.4.1=r36hdb18a49_0
   - r-packrat=0.5.0=r36h6115d3f_1001
-  - r-pillar=1.4.2=r36h6115d3f_2
+  - r-pillar=1.4.3=r36h6115d3f_0
   - r-pkgbuild=1.0.6=r36h6115d3f_0
   - r-pkgconfig=2.0.3=r36h6115d3f_0
   - r-pkgload=1.0.2=r36hf99fc2c_1001
   - r-pki=0.1_5.1=r36h159158b_1003
   - r-plogr=0.2.0=r36h6115d3f_1002
-  - r-plyr=1.8.4=r36hf99fc2c_1003
+  - r-plyr=1.8.5=r36hc5da6b9_0
   - r-png=0.1_7=r36h159158b_1003
   - r-praise=1.0.0=r36h6115d3f_1003
   - r-prettyunits=1.0.2=r36h6115d3f_1002
@@ -249,33 +249,33 @@ dependencies:
   - r-rjava=0.9_11=r36h159158b_1
   - r-rjdbc=0.2_7.1=r36h6115d3f_0
   - r-rjson=0.2.20=r36hf99fc2c_1001
-  - r-rjsonio=1.3_1.2=r36hf99fc2c_1
+  - r-rjsonio=1.3_1.3=r36hc5da6b9_0
   - r-rlang=0.4.2=r36h17f1fa6_0
-  - r-rmarkdown=1.18=r36h6115d3f_0
-  - r-roxygen2=7.0.1=r36hc5da6b9_0
+  - r-rmarkdown=2.0=r36h6115d3f_0
+  - r-roxygen2=7.0.2=r36hc5da6b9_0
   - r-rprojroot=1.3_2=r36h6115d3f_1002
-  - r-rsconnect=0.8.15=r36h6115d3f_0
+  - r-rsconnect=0.8.16=r36h6115d3f_0
   - r-rstudioapi=0.10=r36h6115d3f_2
-  - r-rversions=2.0.0=r36h6115d3f_1
+  - r-rversions=2.0.1=r36h6115d3f_0
   - r-scales=1.1.0=r36h6115d3f_0
   - r-sessioninfo=1.1.1=r36h6115d3f_1001
   - r-shiny=1.4.0=r36h6115d3f_0
   - r-sourcetools=0.1.7=r36h6de7cb9_1001
-  - r-sp=1.3_1=r36h159158b_1001
+  - r-sp=1.3_2=r36h17f1fa6_0
   - r-sparklyr=1.0.5=r36h6115d3f_0
   - r-spatial=7.3_11=r36h159158b_1003
   - r-stringi=1.4.3=r36h570836f_3
   - r-stringr=1.4.0=r36h6115d3f_1
   - r-sys=3.3=r36h159158b_0
-  - r-testthat=2.3.0=r36hc5da6b9_0
+  - r-testthat=2.3.1=r36hc5da6b9_0
   - r-tibble=2.1.3=r36h159158b_1
   - r-tidyr=1.0.0=r36hf99fc2c_0
   - r-tidyselect=0.2.5=r36hf99fc2c_1001
-  - r-tinytex=0.17=r36h6115d3f_0
+  - r-tinytex=0.18=r36h6115d3f_0
   - r-usethis=1.5.1=r36h6115d3f_1
   - r-utf8=1.1.4=r36h159158b_1001
   - r-v8=2.3=r36hf99fc2c_1
-  - r-vctrs=0.2.0=r36h159158b_1
+  - r-vctrs=0.2.1=r36h17f1fa6_0
   - r-viridis=0.5.1=r36h6115d3f_1003
   - r-viridislite=0.3.0=r36h6115d3f_1002
   - r-whisker=0.4=r36h6115d3f_0
@@ -293,7 +293,7 @@ dependencies:
   - rsa=4.0=py_0
   - rstudio=1.1.456=h04f5b5a_1
   - s3transfer=0.2.1=py36_0
-  - setuptools=42.0.1=py36_0
+  - setuptools=42.0.2=py36_0
   - six=1.13.0=py36_0
   - smmap2=2.0.5=py_0
   - snakemake=5.3.0=py36_1
@@ -309,8 +309,8 @@ dependencies:
   - wrapt=1.11.2=py36h0b31af3_0
   - xmlrunner=1.7.7=py_0
   - xz=5.2.4=h1de35cc_1001
-  - yaml=0.1.7=h1de35cc_1001
-  - yarl=1.3.0=py36h1de35cc_1000
+  - yaml=0.2.2=h0b31af3_1
+  - yarl=1.3.0=py36h0b31af3_1000
   - zipp=0.6.0=py_0
   - zlib=1.2.11=h0b31af3_1006
   - zstd=1.4.4=he7fca8b_1
