--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,20 @@ jobs:
            environment-file: config/environment.yml
            python-version: 3.6
            auto-activate-base: false
-      - shell: bash -l {0}
+      - name: snakemake
+        shell: bash -l {0}
         run: |
-          conda info
-          conda list
+          snakemake
+          git status
+          git add .
+          git config --local user.email "noreply@github.com"
+          git config --local user.name "GitHub"
+          git diff-index --quiet HEAD \
+          || git commit \
+          --author="github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>" \
+          -m '📊 Auto-update'
+      - name: Push
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.head_ref }}
