--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
-*.Rmd linguist-language=R
+*.Rmd        linguist-language=R
+.httr-oath   filter=git-crypt diff=git-crypt
+.secret      filter=git-crypt diff=git-crypt
