--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   update:
-    runs-on: 'macos-latest'
+    runs-on: 'ubuntu-latest'
     steps:
       - uses: actions/checkout@v2
       - uses: goanpeca/setup-miniconda@v1
