--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -1,9 +1,8 @@
 name: auto-update
 
 on:
-  - push
-#  schedule:
-#    - cron: '0 5 * * *'
+  schedule:
+    - cron: '0 5 * * *'
 
 jobs:
   update:
