--- a/env.export.yml
+++ b/env.export.yml
@@ -6,313 +6,285 @@ channels:
   - r
 dependencies:
   - _r-mutex=1.0.1=anacondar_1
-  - aioeasywebdav=2.4.0=py36_1000
-  - aiohttp=3.6.2=py36h0b31af3_0
+  - aioeasywebdav=2.4.0=py39hde42818_1001
+  - aiohttp=3.7.2=py39hb5aae12_0
   - appdirs=1.4.3=py_1
   - async-timeout=3.0.1=py_1000
   - attrs=19.3.0=py_0
-  - bcrypt=3.1.7=py36h0b31af3_0
-  - boto3=1.10.45=py_0
-  - botocore=1.13.45=py_0
+  - bcrypt=3.2.0=py39hb5aae12_1
+  - boto3=1.16.7=pyhd8ed1ab_0
+  - botocore=1.19.7=pyhd3deb0d_0
+  - brotlipy=0.7.0=py39h66d5b7b_1001
   - bwidget=1.9.14=0
   - bzip2=1.0.8=h0b31af3_2
+  - c-ares=1.16.1=haf1e3a3_3
   - ca-certificates=2019.11.28=hecc5488_0
   - cachetools=3.1.1=py_0
-  - cairo=1.16.0=he1c11cd_1002
-  - cctools=927.0.2=h5ba7a2e_3
-  - certifi=2019.11.28=py36_0
-  - cffi=1.13.2=py36h33e799b_0
-  - chardet=3.0.4=py36_1003
-  - clang=9.0.0=default_hf57f61e_4
-  - clang_osx-64=9.0.0=h05bbb7f_6
-  - clangxx=9.0.0=default_hf57f61e_4
-  - clangxx_osx-64=9.0.0=h05bbb7f_6
-  - compiler-rt=9.0.0=ha700673_2
-  - compiler-rt_osx-64=9.0.0=ha700673_2
-  - configargparse=0.13.0=py_1
-  - cryptography=2.8=py36hafa8578_1
-  - curl=7.65.3=h22ea746_0
-  - cyrus-sasl=2.1.27=h5d77f49_0
-  - datrie=0.8=py36h01d97ff_0
+  - cairo=1.16.0=h360c52f_1006
+  - cctools=949.0.1=h8821f95_16
+  - cctools_osx-64=949.0.1=h8e49ea9_16
+  - certifi=2020.6.20=py39h2c36a5b_2
+  - cffi=1.14.3=py39h5f57d53_1
+  - chardet=3.0.4=py39h2c36a5b_1008
+  - clang=11.0.0=1
+  - clang-11=11.0.0=default_h000dee7_1
+  - clang_osx-64=11.0.0=h7c70c40_2
+  - clangxx=11.0.0=default_hf57f61e_1
+  - clangxx_osx-64=11.0.0=h043767d_2
+  - compiler-rt=11.0.0=h01488ec_2
+  - compiler-rt_osx-64=11.0.0=hd3c4e95_2
+  - configargparse=1.0=py_0
+  - cryptography=3.2=py39hb751178_0
+  - curl=7.71.1=hcb81553_8
+  - datrie=0.8.2=py39hb5aae12_1
   - decorator=4.4.1=py_0
-  - docutils=0.15.2=py36_0
+  - docutils=0.16=py39hde42818_2
   - dropbox=9.4.0=py_0
   - filechunkio=1.8=py_2
-  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
-  - font-ttf-inconsolata=2.001=hab24e00_0
-  - font-ttf-source-code-pro=2.030=hab24e00_0
-  - font-ttf-ubuntu=0.83=hab24e00_0
-  - fontconfig=2.13.1=h6b1039f_1001
-  - fonts-anaconda=1=h8fa9717_0
+  - fontconfig=2.13.1=h79c0d67_1002
   - freetype=2.10.0=h24853df_1
   - fribidi=1.0.5=h01d97ff_1002
   - ftputil=3.4=py_0
-  - gettext=0.19.8.1=h46ab8bc_1002
+  - gettext=0.19.8.1=haf92f58_1004
   - gfortran_impl_osx-64=7.3.0=hf4212f2_2
-  - gfortran_osx-64=7.3.0=h22b1bf0_6
-  - gitdb2=2.0.6=py_0
-  - gitpython=3.0.5=py_0
-  - glib=2.58.3=py36h577aef8_1002
-  - gmp=6.1.2=h0a44026_1000
-  - google-api-core=1.15.0=py36_0
-  - google-auth=1.10.0=py_0
-  - google-cloud-core=1.1.0=py_0
-  - google-cloud-storage=1.20.0=py_0
-  - google-resumable-media=0.4.1=py_0
-  - googleapis-common-protos=1.6.0=py36_0
+  - gfortran_osx-64=7.3.0=h22b1bf0_7
+  - gitdb=4.0.2=py_0
+  - gitpython=3.1.0=py_0
+  - glib=2.66.2=hb1e8313_0
+  - gmp=6.2.0=h4a8c4bd_2
+  - google-api-core=0.1.4=py_0
+  - google-auth=1.11.2=py_0
+  - google-cloud-core=0.28.1=py_0
+  - google-cloud-storage=1.13.0=py_0
+  - google-resumable-media=0.5.0=py_1
+  - googleapis-common-protos=1.5.9=1
   - graphite2=1.3.13=h2098e52_1000
-  - graphviz=2.38.0=hc6cc99f_1011
-  - gsl=2.5=ha2d443c_1
-  - harfbuzz=2.4.0=hd8d2a14_3
-  - icu=64.2=h6de7cb9_1
-  - idna=2.8=py36_1000
-  - idna_ssl=1.1.0=py36_1000
-  - importlib_metadata=1.3.0=py36_0
+  - graphviz=2.42.3=h98dfb87_0
+  - gsl=2.6=ha2d443c_0
+  - harfbuzz=2.7.2=hf755100_1
+  - icu=67.1=hb1e8313_0
+  - idna=2.9=py_1
+  - importlib-metadata=2.0.0=py_1
+  - importlib_metadata=2.0.0=1
   - isl=0.19=0
-  - jinja2=2.10.3=py_0
+  - jinja2=2.11.1=py_0
   - jmespath=0.9.4=py_0
-  - jpeg=9c=h1de35cc_1001
+  - jpeg=9d=h0b31af3_0
   - jq=1.6=h1de35cc_1000
-  - jsonschema=3.2.0=py36_0
-  - krb5=1.16.4=h1752a42_0
-  - ld64=450.3=h3c32e8a_3
-  - libblas=3.8.0=14_openblas
-  - libcblas=3.8.0=14_openblas
-  - libcurl=7.65.3=h16faf7d_0
-  - libcxx=9.0.0=h89e68fa_1
-  - libedit=3.1.20170329=hcfe32e1_1001
+  - jsonschema=3.2.0=py_2
+  - krb5=1.17.1=h75d18d8_3
+  - ld64=530=h755cc8a_16
+  - ld64_osx-64=530=h66d9e41_16
+  - ldid=2.1.2=h7660a38_2
+  - libblas=3.8.0=15_openblas
+  - libcblas=3.8.0=15_openblas
+  - libclang-cpp11=11.0.0=default_h000dee7_1
+  - libcurl=7.71.1=h9bf37e3_8
+  - libcxx=11.0.0=h439d374_0
+  - libedit=3.1.20191231=hed1e85f_2
+  - libev=4.33=haf1e3a3_1
   - libffi=3.2.1=h6de7cb9_1006
-  - libgfortran=4.0.0=2
-  - libiconv=1.15=h01d97ff_1005
-  - liblapack=3.8.0=14_openblas
-  - libllvm9=9.0.0=h770b8ee_3
-  - libntlm=1.4=h1de35cc_1001
-  - libopenblas=0.3.7=h3d69b6c_6
+  - libgfortran=4.0.0=h50e675f_13
+  - libgfortran4=7.5.0=h50e675f_13
+  - libglib=2.66.2=hdb5fb44_0
+  - libiconv=1.16=haf1e3a3_0
+  - liblapack=3.8.0=15_openblas
+  - libllvm11=11.0.0=hf85e3d2_0
+  - libllvm9=9.0.1=ha1b3eb9_0
+  - libnghttp2=1.41.0=h7580e61_2
+  - libopenblas=0.3.8=h3d69b6c_0
   - libpng=1.6.37=h2573ce8_0
-  - libprotobuf=3.11.2=hd174df1_0
-  - libssh2=1.8.2=hcdc9a53_2
-  - libtiff=4.1.0=ha78913b_1
-  - libv8=7.5.288.30=h319a767_1
-  - libxml2=2.9.10=h53d96d6_0
-  - llvm-openmp=9.0.0=h40edb58_0
+  - libprotobuf=3.13.0.1=hab81aa3_0
+  - libsodium=1.0.18=haf1e3a3_1
+  - libssh2=1.9.0=h39bdce6_5
+  - libtiff=4.1.0=ha78913b_3
+  - libv8=8.4.371.22=h39bfe51_0
+  - libxml2=2.9.10=h7fdee97_2
+  - llvm-openmp=11.0.0=h73239a0_1
+  - llvm-tools=11.0.0=hf85e3d2_0
   - lz4-c=1.8.3=h6de7cb9_1001
-  - make=4.2.1=h1de35cc_2004
-  - markupsafe=1.1.1=py36h0b31af3_0
-  - more-itertools=8.0.2=py_0
+  - make=4.3=h0b31af3_0
+  - markupsafe=1.1.1=py39h66d5b7b_2
   - mpc=1.1.0=h4160ff4_1006
   - mpfr=4.0.2=h44b798e_0
-  - multidict=4.6.1=py36h0b31af3_0
-  - ncurses=6.1=h0a44026_1002
+  - multidict=4.7.5=py39hb5aae12_2
+  - ncurses=6.2=hb1e8313_2
   - networkx=2.4=py_0
-  - numpy=1.17.3=py36hde6bac1_0
+  - numpy=1.19.2=py39hef9df0d_1
   - oniguruma=6.9.3=h01d97ff_0
-  - openjdk=8.0.192=h1de35cc_1003
-  - openssl=1.1.1d=h0b31af3_0
-  - pandas=0.25.3=py36h4f17bb1_0
-  - pandoc=2.9.1=0
+  - openssl=1.1.1h=haf1e3a3_0
+  - pandas=1.1.3=py39h13df4ff_2
+  - pandoc=2.9.2=0
   - pango=1.42.4=h6691c8e_1
-  - paramiko=2.7.1=py36_0
-  - pcre=8.43=h4a8c4bd_0
-  - pip=19.3.1=py36_0
+  - paramiko=2.7.2=pyh9f0ad1d_0
+  - pcre=8.44=h4a8c4bd_0
+  - pcre2=10.35=h977ceac_0
+  - pip=20.0.2=py_2
   - pixman=0.38.0=h01d97ff_1003
   - prettytable=0.7.2=py_3
-  - protobuf=3.11.2=py36h4a8c4bd_0
-  - psutil=5.6.7=py36h0b31af3_0
+  - protobuf=3.13.0.1=py39ha36be7a_1
+  - psutil=5.7.3=py39h66d5b7b_0
   - pyasn1=0.4.8=py_0
   - pyasn1-modules=0.2.7=py_0
-  - pycparser=2.19=py36_1
-  - pygraphviz=1.5=py36h0b31af3_1001
-  - pynacl=1.3.0=py36h0b31af3_1001
-  - pyopenssl=19.1.0=py36_0
-  - pyrsistent=0.15.6=py36h0b31af3_0
+  - pycparser=2.19=py_2
+  - pygraphviz=1.6=py39h1a113c0_1
+  - pynacl=1.4.0=py39hb5aae12_2
+  - pyopenssl=19.1.0=py_1
+  - pyrsistent=0.17.3=py39hb5aae12_1
   - pysftp=0.2.9=py_1
-  - pysocks=1.7.1=py36_0
-  - python=3.6.7=h4285619_1006
+  - pysocks=1.7.1=py39h2c36a5b_2
+  - python=3.9.0=ha017127_4_cpython
   - python-dateutil=2.8.1=py_0
-  - python-irodsclient=0.7.0=py_0
+  - python-irodsclient=0.8.2=py_0
+  - python_abi=3.9=1_cp39
   - pytz=2019.3=py_0
-  - pyyaml=5.2=py36h0b31af3_0
-  - r-askpass=1.1=r36h159158b_1
-  - r-assertthat=0.2.1=r36h6115d3f_1
-  - r-backports=1.1.5=r36h17f1fa6_0
-  - r-base=3.6.2=he15a7b5_0
-  - r-base64enc=0.1_3=r36h159158b_1003
-  - r-bh=1.69.0_1=r36h6115d3f_1
-  - r-bit=1.1_14=r36h159158b_1
-  - r-bit64=0.9_7=r36h159158b_1001
-  - r-bitops=1.0_6=r36h159158b_1003
-  - r-blob=1.2.0=r36_1
-  - r-brew=1.0_6=r36h6115d3f_1002
-  - r-callr=3.4.0=r36h6115d3f_0
-  - r-catools=1.17.1.3=r36hc5da6b9_0
-  - r-cellranger=1.1.0=r36h6115d3f_1002
-  - r-cli=2.0.0=r36h6115d3f_0
-  - r-clipr=0.7.0=r36h6115d3f_0
-  - r-clisymbols=1.2.0=r36h6115d3f_1002
-  - r-colorspace=1.4_1=r36h159158b_1
-  - r-commonmark=1.7=r36h159158b_1001
-  - r-config=0.3=r36h6115d3f_1002
-  - r-covr=3.4.0=r36hc5da6b9_0
-  - r-cowplot=1.0.0=r36h6115d3f_1
-  - r-crayon=1.3.4=r36h6115d3f_1002
-  - r-crosstalk=1.0.0=r36h6115d3f_1002
-  - r-curl=4.3=r36h17f1fa6_0
-  - r-data.table=1.12.6=r36h17f1fa6_0
-  - r-dbi=1.1.0=r36h6115d3f_0
-  - r-dbplyr=1.4.2=r36h6115d3f_1
-  - r-desc=1.2.0=r36h6115d3f_1002
-  - r-devtools=2.2.1=r36h6115d3f_0
-  - r-digest=0.6.23=r36hc5da6b9_0
-  - r-dplyr=0.8.3=r36hf99fc2c_3
-  - r-dt=0.11=r36h6115d3f_0
-  - r-ellipsis=0.3.0=r36h159158b_0
-  - r-evaluate=0.14=r36h6115d3f_1
-  - r-fansi=0.4.0=r36h159158b_1001
-  - r-farver=2.0.1=r36hc5da6b9_0
-  - r-fastmap=1.0.1=r36hc5da6b9_0
-  - r-forcats=0.4.0=r36h6115d3f_1
-  - r-forge=0.2.0=r36h6115d3f_1
-  - r-formatr=1.7=r36h6115d3f_1
-  - r-fs=1.3.1=r36hf99fc2c_1
-  - r-generics=0.0.2=r36h6115d3f_1002
-  - r-geosphere=1.5_10=r36h159158b_1
-  - r-ggmap=3.0.0=r36h6115d3f_1
-  - r-ggplot2=3.2.1=r36h6115d3f_0
-  - r-ggthemes=4.2.0=r36h6115d3f_1
-  - r-gh=1.0.1=r36h6115d3f_1002
-  - r-git2r=0.26.1=r36h45ee23c_1
-  - r-glue=1.3.1=r36h159158b_1
-  - r-gridextra=2.3=r36h6115d3f_1002
-  - r-gtable=0.3.0=r36h6115d3f_2
-  - r-haven=2.2.0=r36hee97c7f_0
-  - r-here=0.1=r36h6115d3f_1002
-  - r-highr=0.8=r36h6115d3f_1
-  - r-hms=0.5.2=r36h6115d3f_0
-  - r-htmltools=0.4.0=r36hc5da6b9_0
-  - r-htmlwidgets=1.5.1=r36h6115d3f_0
-  - r-httpuv=1.5.2=r36hf99fc2c_1
-  - r-httr=1.4.1=r36h6115d3f_1
-  - r-ini=0.3.1=r36h6115d3f_1002
-  - r-jpeg=0.1_8=r36h159158b_1003
-  - r-jqr=1.1.0=r36h159158b_1
-  - r-jsonlite=1.6=r36h159158b_1001
-  - r-knitr=1.26=r36h6115d3f_0
-  - r-labeling=0.3=r36h6115d3f_1002
-  - r-later=1.0.0=r36hc5da6b9_0
-  - r-lattice=0.20_38=r36h159158b_1002
-  - r-lazyeval=0.2.2=r36h159158b_1
-  - r-lifecycle=0.1.0=r36h6115d3f_0
-  - r-magrittr=1.5=r36h6115d3f_1002
-  - r-markdown=1.1=r36h159158b_0
-  - r-mass=7.3_51.5=r36h17f1fa6_0
-  - r-matrix=1.2_18=r36h17f1fa6_0
-  - r-memoise=1.1.0=r36h6115d3f_1003
-  - r-mgcv=1.8_31=r36h17f1fa6_0
-  - r-mime=0.8=r36h17f1fa6_0
-  - r-miniui=0.1.1.1=r36h6115d3f_1001
-  - r-mongolite=2.1.0=r36h159158b_1
-  - r-munsell=0.5.0=r36h6115d3f_1002
-  - r-nlme=3.1_143=r36h384270c_0
-  - r-odbc=1.2.1=r36hc5da6b9_0
-  - r-openssl=1.4.1=r36hdb18a49_0
-  - r-packrat=0.5.0=r36h6115d3f_1001
-  - r-pillar=1.4.3=r36h6115d3f_0
-  - r-pkgbuild=1.0.6=r36h6115d3f_0
-  - r-pkgconfig=2.0.3=r36h6115d3f_0
-  - r-pkgload=1.0.2=r36hf99fc2c_1001
-  - r-pki=0.1_5.1=r36h159158b_1003
-  - r-plogr=0.2.0=r36h6115d3f_1002
-  - r-plyr=1.8.5=r36hc5da6b9_0
-  - r-png=0.1_7=r36h159158b_1003
-  - r-praise=1.0.0=r36h6115d3f_1003
-  - r-prettyunits=1.0.2=r36h6115d3f_1002
-  - r-processx=3.4.1=r36h159158b_0
-  - r-profvis=0.3.6=r36h159158b_1
-  - r-progress=1.2.2=r36h6115d3f_1
-  - r-promises=1.1.0=r36hc5da6b9_0
-  - r-ps=1.3.0=r36h159158b_1001
-  - r-purrr=0.3.3=r36h17f1fa6_0
-  - r-r2d3=0.2.3=r36h6115d3f_1001
-  - r-r6=2.4.1=r36h6115d3f_0
-  - r-rappdirs=0.3.1=r36h159158b_1003
-  - r-rcmdcheck=1.3.3=r36h6115d3f_2
-  - r-rcolorbrewer=1.1_2=r36h6115d3f_1002
-  - r-rcpp=1.0.3=r36hc5da6b9_0
-  - r-rcurl=1.95_4.12=r36h159158b_1
-  - r-readr=1.3.1=r36hf99fc2c_1002
-  - r-readxl=1.3.1=r36hf99fc2c_2
-  - r-rematch=1.0.1=r36h6115d3f_1002
-  - r-remotes=2.1.0=r36h6115d3f_1
-  - r-reshape2=1.4.3=r36hf99fc2c_1004
-  - r-rex=1.1.2=r36h6115d3f_1001
-  - r-rgooglemaps=1.4.4=r36h6115d3f_0
-  - r-rjava=0.9_11=r36h159158b_1
-  - r-rjdbc=0.2_7.1=r36h6115d3f_0
-  - r-rjson=0.2.20=r36hf99fc2c_1001
-  - r-rjsonio=1.3_1.3=r36hc5da6b9_0
-  - r-rlang=0.4.2=r36h17f1fa6_0
-  - r-rmarkdown=2.0=r36h6115d3f_0
-  - r-roxygen2=7.0.2=r36hc5da6b9_0
-  - r-rprojroot=1.3_2=r36h6115d3f_1002
-  - r-rsconnect=0.8.16=r36h6115d3f_0
-  - r-rstudioapi=0.10=r36h6115d3f_2
-  - r-rversions=2.0.1=r36h6115d3f_0
-  - r-scales=1.1.0=r36h6115d3f_0
-  - r-sessioninfo=1.1.1=r36h6115d3f_1001
-  - r-shiny=1.4.0=r36h6115d3f_0
-  - r-sourcetools=0.1.7=r36h6de7cb9_1001
-  - r-sp=1.3_2=r36h17f1fa6_0
-  - r-sparklyr=1.0.5=r36h6115d3f_0
-  - r-spatial=7.3_11=r36h159158b_1003
-  - r-stringi=1.4.3=r36h570836f_3
-  - r-stringr=1.4.0=r36h6115d3f_1
-  - r-sys=3.3=r36h159158b_0
-  - r-testthat=2.3.1=r36hc5da6b9_0
-  - r-tibble=2.1.3=r36h159158b_1
-  - r-tidyr=1.0.0=r36hf99fc2c_0
-  - r-tidyselect=0.2.5=r36hf99fc2c_1001
-  - r-tinytex=0.18=r36h6115d3f_0
-  - r-usethis=1.5.1=r36h6115d3f_1
-  - r-utf8=1.1.4=r36h159158b_1001
-  - r-v8=2.3=r36hf99fc2c_1
-  - r-vctrs=0.2.1=r36h17f1fa6_0
-  - r-viridis=0.5.1=r36h6115d3f_1003
-  - r-viridislite=0.3.0=r36h6115d3f_1002
-  - r-whisker=0.4=r36h6115d3f_0
-  - r-withr=2.1.2=r36h6115d3f_1001
-  - r-xfun=0.11=r36h6115d3f_0
-  - r-xml2=1.2.2=r36hf99fc2c_0
-  - r-xopen=1.0.0=r36h6115d3f_1002
-  - r-xtable=1.8_4=r36h6115d3f_2
-  - r-yaml=2.2.0=r36h159158b_1002
-  - r-zeallot=0.1.0=r36h6115d3f_1001
-  - r-zoo=1.8_6=r36h159158b_1
-  - ratelimiter=1.2.0=py36_1000
-  - readline=8.0=hcfe32e1_0
-  - requests=2.22.0=py36_1
+  - pyyaml=5.3.1=py39h66d5b7b_1
+  - r-askpass=1.1=r40h17f1fa6_2
+  - r-assertthat=0.2.1=r40h6115d3f_2
+  - r-backports=1.1.10=r40h800e0f2_0
+  - r-base=4.0.3=h90464e4_2
+  - r-base64enc=0.1_3=r40h17f1fa6_1004
+  - r-bitops=1.0_6=r40h17f1fa6_1004
+  - r-brew=1.0_6=r40h6115d3f_1003
+  - r-callr=3.5.1=r40h142f84f_0
+  - r-cli=2.1.0=r40h142f84f_0
+  - r-clipr=0.7.1=r40h142f84f_0
+  - r-clisymbols=1.2.0=r40h6115d3f_1003
+  - r-colorspace=1.4_1=r40h17f1fa6_2
+  - r-commonmark=1.7=r40h17f1fa6_1002
+  - r-covr=3.5.1=r40h710217c_0
+  - r-cowplot=1.1.0=r40h6115d3f_0
+  - r-cpp11=0.2.3=r40h142f84f_1
+  - r-crayon=1.3.4=r40h6115d3f_1003
+  - r-crosstalk=1.1.0.1=r40h6115d3f_1
+  - r-curl=4.3=r40h17f1fa6_1
+  - r-desc=1.2.0=r40h6115d3f_1003
+  - r-devtools=2.3.2=r40h6115d3f_0
+  - r-digest=0.6.27=r40h342fd00_0
+  - r-dplyr=1.0.2=r40h710217c_0
+  - r-dt=0.16=r40h142f84f_0
+  - r-ellipsis=0.3.1=r40h17f1fa6_0
+  - r-evaluate=0.14=r40h6115d3f_2
+  - r-fansi=0.4.1=r40h17f1fa6_1
+  - r-farver=2.0.3=r40hc5da6b9_1
+  - r-fastmap=1.0.1=r40hc5da6b9_1
+  - r-forcats=0.5.0=r40h6115d3f_1
+  - r-fs=1.5.0=r40h710217c_0
+  - r-generics=0.0.2=r40h6115d3f_1003
+  - r-ggmap=3.0.0=r40h6115d3f_2
+  - r-ggplot2=3.3.2=r40h6115d3f_0
+  - r-gh=1.1.0=r40h6115d3f_1
+  - r-git2r=0.27.1=r40h8d49edc_0
+  - r-glue=1.4.2=r40h800e0f2_0
+  - r-gtable=0.3.0=r40h6115d3f_3
+  - r-here=0.1=r40h6115d3f_1003
+  - r-highr=0.8=r40h6115d3f_2
+  - r-hms=0.5.3=r40h6115d3f_1
+  - r-htmltools=0.5.0=r40hc5da6b9_0
+  - r-htmlwidgets=1.5.2=r40h142f84f_0
+  - r-httpuv=1.5.4=r40hc5da6b9_0
+  - r-httr=1.4.2=r40h6115d3f_0
+  - r-ini=0.3.1=r40h6115d3f_1003
+  - r-isoband=0.2.2=r40hc5da6b9_0
+  - r-jpeg=0.1_8.1=r40h17f1fa6_1
+  - r-jsonlite=1.7.1=r40h800e0f2_0
+  - r-knitr=1.30=r40h6115d3f_0
+  - r-labeling=0.4.2=r40h142f84f_0
+  - r-later=1.1.0.1=r40hc5da6b9_0
+  - r-lattice=0.20_41=r40h17f1fa6_2
+  - r-lazyeval=0.2.2=r40h17f1fa6_2
+  - r-lifecycle=0.2.0=r40h6115d3f_1
+  - r-lubridate=1.7.9=r40hc5da6b9_0
+  - r-magrittr=1.5=r40h6115d3f_1003
+  - r-markdown=1.1=r40h17f1fa6_1
+  - r-mass=7.3_53=r40h800e0f2_0
+  - r-matrix=1.2_18=r40h26f5615_3
+  - r-memoise=1.1.0=r40h6115d3f_1004
+  - r-mgcv=1.8_33=r40hb6d66fe_0
+  - r-mime=0.9=r40h17f1fa6_1
+  - r-munsell=0.5.0=r40h6115d3f_1003
+  - r-nlme=3.1_149=r40hbce4cb8_0
+  - r-openssl=1.4.3=r40ha713f70_0
+  - r-pillar=1.4.6=r40h6115d3f_0
+  - r-pkgbuild=1.1.0=r40h6115d3f_0
+  - r-pkgconfig=2.0.3=r40h6115d3f_1
+  - r-pkgload=1.1.0=r40hc5da6b9_0
+  - r-plogr=0.2.0=r40h6115d3f_1003
+  - r-plyr=1.8.6=r40hc5da6b9_1
+  - r-png=0.1_7=r40h17f1fa6_1004
+  - r-praise=1.0.0=r40h6115d3f_1004
+  - r-prettyunits=1.1.1=r40h6115d3f_1
+  - r-processx=3.4.4=r40h800e0f2_0
+  - r-promises=1.1.1=r40hc5da6b9_0
+  - r-ps=1.4.0=r40hb5ad454_0
+  - r-purrr=0.3.4=r40h17f1fa6_1
+  - r-r6=2.5.0=r40hc72bb7e_0
+  - r-rcmdcheck=1.3.3=r40h6115d3f_3
+  - r-rcolorbrewer=1.1_2=r40h6115d3f_1003
+  - r-rcpp=1.0.5=r40hc5da6b9_0
+  - r-readr=1.4.0=r40h342fd00_0
+  - r-rematch2=2.1.2=r40h6115d3f_1
+  - r-remotes=2.2.0=r40h6115d3f_0
+  - r-reshape2=1.4.4=r40hc5da6b9_1
+  - r-rex=1.2.0=r40h6115d3f_1
+  - r-rgooglemaps=1.4.5.3=r40h6115d3f_1
+  - r-rjson=0.2.20=r40hc5da6b9_1002
+  - r-rlang=0.4.7=r40h17f1fa6_0
+  - r-rmarkdown=2.5=r40h142f84f_0
+  - r-roxygen2=7.1.1=r40hc5da6b9_0
+  - r-rprojroot=1.3_2=r40h6115d3f_1003
+  - r-rstudioapi=0.11=r40h6115d3f_1
+  - r-rversions=2.0.2=r40h6115d3f_0
+  - r-scales=1.1.1=r40h6115d3f_0
+  - r-sessioninfo=1.1.1=r40h6115d3f_1002
+  - r-shiny=1.5.0=r40h6115d3f_0
+  - r-sourcetools=0.1.7=r40h4a8c4bd_1002
+  - r-sp=1.4_2=r40h17f1fa6_0
+  - r-stringi=1.5.3=r40ha4098bd_0
+  - r-stringr=1.4.0=r40h6115d3f_2
+  - r-sys=3.4=r40h800e0f2_0
+  - r-testthat=2.3.2=r40hc5da6b9_1
+  - r-tibble=3.0.4=r40hb5ad454_0
+  - r-tidyr=1.1.2=r40h710217c_0
+  - r-tidyselect=1.1.0=r40h6115d3f_0
+  - r-tinytex=0.26=r40h6115d3f_0
+  - r-usethis=1.6.3=r40h6115d3f_0
+  - r-utf8=1.1.4=r40h17f1fa6_1003
+  - r-vctrs=0.3.4=r40h800e0f2_0
+  - r-viridislite=0.3.0=r40h6115d3f_1003
+  - r-whisker=0.4=r40h6115d3f_1
+  - r-withr=2.3.0=r40h6115d3f_0
+  - r-xfun=0.18=r40h800e0f2_0
+  - r-xml2=1.3.2=r40hc5da6b9_1
+  - r-xopen=1.0.0=r40h6115d3f_1003
+  - r-xtable=1.8_4=r40h6115d3f_3
+  - r-yaml=2.2.1=r40h17f1fa6_1
+  - r-zeallot=0.1.0=r40h6115d3f_1002
+  - ratelimiter=1.2.0=py_1002
+  - readline=8.0=h0678c8f_2
+  - requests=2.24.0=pyh9f0ad1d_0
   - rsa=4.0=py_0
-  - rstudio=1.1.456=h04f5b5a_1
-  - s3transfer=0.2.1=py36_0
-  - setuptools=42.0.2=py36_0
-  - six=1.13.0=py36_0
-  - smmap2=2.0.5=py_0
-  - snakemake=5.3.0=py36_1
-  - snakemake-minimal=5.3.0=py36_1
-  - sqlite=3.30.1=h93121df_0
-  - tapi=1000.10.8=ha1b3eb9_4
+  - s3transfer=0.3.3=py39hde42818_2
+  - setuptools=49.6.0=py39h2c36a5b_2
+  - six=1.15.0=pyh9f0ad1d_0
+  - smmap=3.0.1=py_0
+  - snakemake=5.5.0=0
+  - snakemake-minimal=5.5.0=py_0
+  - sqlite=3.33.0=h960bd1c_1
+  - tapi=1100.0.11=h879752b_0
   - tk=8.6.10=hbbe82c9_0
   - tktable=2.10=h008db23_3
-  - typing_extensions=3.7.4.1=py36_0
-  - unixodbc=2.3.7=hea208f4_1000
-  - urllib3=1.25.7=py36_0
-  - wheel=0.33.6=py36_0
-  - wrapt=1.11.2=py36h0b31af3_0
+  - typing-extensions=3.7.4.3=0
+  - typing_extensions=3.7.4.3=py_0
+  - tzdata=2020d=h516909a_0
+  - urllib3=1.25.11=py_0
+  - wheel=0.34.2=py_1
+  - wrapt=1.11.2=py39hb5aae12_1
   - xmlrunner=1.7.7=py_0
-  - xz=5.2.4=h1de35cc_1001
-  - yaml=0.2.2=h0b31af3_1
-  - yarl=1.3.0=py36h0b31af3_1000
-  - zipp=0.6.0=py_0
+  - xz=5.2.5=haf1e3a3_1
+  - yaml=0.2.5=haf1e3a3_0
+  - yarl=1.6.2=py39hb5aae12_0
+  - zipp=3.0.0=py_0
   - zlib=1.2.11=h0b31af3_1006
   - zstd=1.4.4=he7fca8b_1
 prefix: /Users/kelly/miniconda3/envs/strava
-
